test/expected/simple-fs-read.txt
/scripts/simple-fs-read.js:10
  throw new Error('trace');
  ^

Error: trace
    at callback (/scripts/simple-fs-read.js:r:c)
    at Object.<anonymous> (/scripts/simple-fs-read.js:r:c)
